syntax = "proto3";

package profilesLimits;

option go_package = "/proto";

service ProfilesLimitsService{
  rpc GetProfilesLimits (GetProfilesLimitsRequest) returns (GetProfilesLimitsResponse);
}

message GetProfilesLimitsRequest{}

message ProfilesWithLimits {
  string id = 1;
  int32 views_limits = 2;
}

message GetProfilesLimitsResponse {
  repeated ProfilesWithLimits profilesWithLimits = 1;
}